Don't prompt for download location on Android

On Android, choosing file location is not very user friendly.
Disable this for now.

BUG=641790

Review-Url: https://codereview.chromium.org/2394303003
Cr-Commit-Position: refs/heads/master@{#423921}

Former-commit-id: b034f7843cb922da49735428a0aafcb4cf9a3e38