chrome/browser/download/chrome_download_manager_delegate_unittest.cc
@@ -336,6 +336,8 @@ DownloadPrefs* ChromeDownloadManagerDelegateTest::download_prefs() {
 
 }  // namespace
 
+// There is no "save as" context menu option on Android.
+#if !BUILDFLAG(ANDROID_JAVA_UI)
 TEST_F(ChromeDownloadManagerDelegateTest, StartDownload_LastSavePath) {
   GURL download_url("http://example.com/foo.txt");
 
@@ -408,6 +410,7 @@ TEST_F(ChromeDownloadManagerDelegateTest, StartDownload_LastSavePath) {
     VerifyAndClearExpectations();
   }
 }
+#endif  // !BUILDFLAG(ANDROID_JAVA_UI)
 
 TEST_F(ChromeDownloadManagerDelegateTest, MaybeDangerousContent) {
 #if !defined(OS_ANDROID)
